exec/Makefile had bug, MKFLAGS from Makefile.host were not accounted for.

--- a/exec/Makefile
+++ b/exec/Makefile
@@ -34,7 +34,7 @@ endif
 CWD          = $(shell pwd)
 MKCFLAGS     = $(INC_PMC) -I$(WRAPPERS)/include -I$(TOOLS)/include -I$(CWD)  $(IINCDIRS) \
                -I$(FFTW)/include -I$(GSL)/include $(WARNINGS) $(ARCHFLAGS) $(IFLAGS_MPI) $(FPIC) $(DEBUG) $(OPTIM)
-MKLFLAGS     = -L$(WRAPPERS) -L$(TOOLS) $(LLIBDIRS) -Wl,-rpath,$(FFTW)/lib -L$(FFTW)/lib -Wl,-rpath,$(GSL)/lib \
+MKLFLAGS    += -L$(WRAPPERS) -L$(TOOLS) $(LLIBDIRS) -Wl,-rpath,$(FFTW)/lib -L$(FFTW)/lib -Wl,-rpath,$(GSL)/lib \
                -L$(GSL)/lib -lparam -lwr $(LLIBS) \
 	       -lerrorio -lpar -lconf -lmvdens \
                -lgsl -lgslcblas -lfftw3 -ldl $(SHARED) $(LAPACK) $(FLIBS) $(WMAPLIBS) $(FPIC) $(DEBUG) \
